tests/syntax_error/bad_field.jou
def foo() -> None:
    bar.(1+2)  # Error: expected a field or method name, got '('
